--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'https://yitzikt.github.io/Ga-medicaid.js';})();">GA-Medicaid</a>
+</body>
+</html>
