--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'https://yitzikt.github.io/Ga-medicaid.js';})();">GA-Medicaid</a>
+    <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'https://yitzikt.github.io/bookmarklet/Ga-medicaid.js';})();">GA-Medicaid</a>
 </body>
 </html>
