--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            font-family: 'Courier New', Courier, monospace;
+        }
+    </style>
 </head>
 <body>
-    <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'https://yitzikt.github.io/bookmarklet/Ga-medicaid.js';})();">GA-Medicaid</a>
+    <ul>
+        <li>
+            <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'https://yitzikt.github.io/bookmarklet/Ga-medicaid.js';})();">GA-Medicaid</a>
+        </li>
+        <li>
+            <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'http://127.0.0.1:54744/bookmarklet/reader.js';})();">reader local</a>
+            <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'https://yitzikt.github.io/bookmarklet/reader.js';})();">reader</a>
+        </li>
+    </ul>
+</body>
 </body>
 </html>
+
+
