--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
     <ul>
         <li>
-            <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'https://yitzikt.github.io/bookmarklet/Ga-medicaid.js';})();">GA-Medicaid</a>
+            <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'https://yitzikt.github.io/bookmarklet/Ga-medicaid.js'; js.remove();})();">GA-Medicaid</a>
         </li>
         <li>
-            <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'http://127.0.0.1:54744/bookmarklet/reader.js';})();">reader local</a>
-            <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'https://yitzikt.github.io/bookmarklet/reader.js';})();">reader</a>
+            <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'http://127.0.0.1:54744/bookmarklet/reader.js'; js.remove();})();">reader local</a>
+            <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'https://yitzikt.github.io/bookmarklet/reader.js'; js.remove();})();">reader</a>
         </li>
     </ul>
 </body>
