service codes CR

--- a/index.html
+++ b/index.html
@@ -14,15 +14,25 @@
 <body>
     <ul>
         <li>
-            <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'https://yitzikt.github.io/bookmarklet/Ga-medicaid.js'; js.remove();})();">GA-Medicaid</a>
+            <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'https://yitzikt.github.io/bookmarklet/Ga-medicaid.js?ts=' + new Date().getMilliseconds(); js.remove();})();">GA-Medicaid</a>
         </li>
         <li>
-            <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'http://127.0.0.1:54744/bookmarklet/reader.js'; js.remove();})();">reader local</a>
-            <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'https://yitzikt.github.io/bookmarklet/reader.js'; js.remove();})();">reader</a>
+            <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'http://127.0.0.1:54744/bookmarklet/reader.js?ts=' + new Date().getMilliseconds(); js.remove();})();">reader local</a>
+            <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'https://yitzikt.github.io/bookmarklet/reader.js?ts=' + new Date().getMilliseconds(); js.remove();})();">reader</a>
+        </li>
+        <li>
+            <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'http://127.0.0.1:54744/bookmarklet/CrumbleCookies.js?ts=' + new Date().getMilliseconds(); js.remove();})();">CrumbleCookies local</a>
+            <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'https://yitzikt.github.io/bookmarklet/CrumbleCookies.js?ts=' + new Date().getMilliseconds(); js.remove();})();">CrumbleCookies</a>
+        </li>
+        <li>
+            <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'http://127.0.0.1:54744/bookmarklet/PDFPopOut.js?ts=' + new Date().getMilliseconds(); js.remove();})();">PDFPopOut local</a>
+            <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'https://yitzikt.github.io/bookmarklet/PDFPopOut.js?ts=' + new Date().getMilliseconds(); js.remove();})();">PDFPopOut</a>
+        </li>
+        <li>
+            <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'http://127.0.0.1:54744/bookmarklet/service-codes.js?ts=' + new Date().getMilliseconds(); js.remove();})();">service-codes local</a>
+            <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'https://yitzikt.github.io/bookmarklet/service-codes.js?ts=' + new Date().getMilliseconds(); js.remove();})();">service-codes</a>
         </li>
     </ul>
 </body>
 </body>
 </html>
-
-
