--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
             <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'http://127.0.0.1:54744/bookmarklet/service-codes.js?ts=' + new Date().getMilliseconds(); js.remove();})();">service-codes local</a>
             <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'https://yitzikt.github.io/bookmarklet/service-codes.js?ts=' + new Date().getMilliseconds(); js.remove();})();">service-codes</a>
         </li>
+        <li>
+            <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'http://127.0.0.1:54744/bookmarklet/dark-mode.js?ts=' + new Date().getMilliseconds(); js.remove();})();">dark-mode local</a>
+            <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'https://yitzikt.github.io/bookmarklet/dark-mode.js?ts=' + new Date().getMilliseconds(); js.remove();})();">dark-mode</a>
+        </li>
     </ul>
 </body>
 </body>
