--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </style>
 </head>
 <body>
+    <a href="http://https://yitzikt.github.io/questions/index.html">q's</a>
     <ul>
         <li>
             <a href="javascript:(function () {    const js = document.body.appendChild(document.createElement('script'));    js.onerror = () =>  alert('Sorry, the script could not be loaded.');    js.src = 'https://yitzikt.github.io/bookmarklet/Ga-medicaid.js?ts=' + new Date().getMilliseconds(); js.remove();})();">GA-Medicaid</a>
