made flash cards temp

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                 "answer": "demographic information"
             },
             {
-                "question": "Ensures that employees are protected from exposure to body fluids and pathogens - OSHA - know what OSHA stands for",
-                "answer": "OSHA"
+                "question": "Ensures that employees are protected from exposure to body fluids and pathogens - ",
+                "answer": "OSHA - know what OSHA stands for"
             },
             {
                 "question": "PPE for vomiting blood -",
