--- a/games/TripleFifteen/index.html
+++ b/games/TripleFifteen/index.html
@@ -25,6 +25,7 @@
     </div>
   </div>
   <button onclick="resetGame()">Reset Game</button>
+  <button id="undoButton"">Undo last move</button>
   <script src="script.js"></script>
 </body>
 </html>
