--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
 </head>
 
 <body>
-    <p>made with love from Yitzy</p>
+    <p>What's up PINCHOS
+    </p>
+    <!-- <p>made with love from Yitzy</p> -->
 
-    <div id="flashcard">
+    <!-- <div id="flashcard">
         <h2 id="question">Question</h2>
         <h3 id="answer" style="display: none;">Answer</h3>
         <button onclick="showAnswer()">Show Answer</button>
@@ -45,7 +47,7 @@
         <label for="skipIndex">Skip to Question:</label>
         <input type="number" id="skipIndex" min="1" max="${flashcards.length}" value="1">
         <button onclick="skipTo()">Skip</button>
-    </div>
+    </div> -->
 
     <script>
         const flashcards = [
